--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -215,7 +215,7 @@
                     listItem.className = 'page-item';
                     listItem.setAttribute('data-page-id', page.id);
                     listItem.setAttribute('data-access-token', page.access_token);
-                    listItem.innerHTML = `<strong>${page.name}</strong> <span>(ID: ${page.id})</span><br><span>${page.access_token</span>`;
+                    listItem.innerHTML = `<strong>${page.name}</strong> <span>(ID: ${page.id})</span><br><span>${page.access_token}</span>`;
                     pagesList.appendChild(listItem);
                 });
             } else {
