--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -362,6 +362,7 @@ ul {
         </div>
         <div class="message-input">
             <input type="text" id="message" placeholder="Type your message here...">
+            <input type="hidden" id="data-conversation-id" value="">
             <input type="hidden" id="data-access-token" value="">
             <input type="hidden" id="data-recipient-id" value="">
             <button onclick="sendMessage()">Send</button>
