--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -355,7 +355,7 @@ ul {
         
     <div class="chat-container">
         <div class="chat-header">
-            <h1>Chat Widget</h1>
+            <h1>Chat_Widget</h1>
         </div>
         <div id="chat-messages" class="chat-messages">
             <!-- Messages will be displayed here -->
