--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -370,7 +370,7 @@ ul {
 
     <script>
  const chatSocket = new WebSocket(
-        'ws://' + window.location.host + '/ws/chat/'
+        'wss://' + window.location.host + '/ws/chat/'
     );
 
     chatSocket.onmessage = function(e) {
