--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -516,6 +516,18 @@ function loadConversation(conversationId, accessToken) {
 }
 
     //*** end ***
+
+     const messageInput = document.getElementById('message');
+        if (messageInput) {
+            messageInput.addEventListener('keypress', function (e) {
+                if (e.key === 'Enter') {
+                    sendMessage();
+                }
+            });
+        }
+
+
+        
        async function sendMessage() {
     const message = document.getElementById('message').value;
     const recipientId = window.currentRecipientId;
@@ -567,11 +579,6 @@ function loadConversation(conversationId, accessToken) {
             chatMessages.scrollTop = chatMessages.scrollHeight;
         }
 
-         function sendMessageOnEnter(event) {
-        if (event.key === 'Enter') {
-            sendMessage();
-        }
-    }
     </script>
 </body>
 </html>
